--- a/app/build.gradle
+++ b/app/build.gradle
@@ -39,7 +39,7 @@ dependencies {
     implementation "androidx.recyclerview:recyclerview:1.1.0-beta03"
     implementation "com.google.android.material:material:1.1.0-alpha09"
 
-    def room = "2.2.0-alpha02"
+    def room = '2.2.0-beta01'
     implementation "androidx.room:room-runtime:$room"
     annotationProcessor "androidx.room:room-compiler:$room"
 
